fixed text-query issue on small screens

--- a/sass/components/_query.scss
+++ b/sass/components/_query.scss
@@ -2,7 +2,7 @@
   border: .1rem solid $color-blue-light;
   border-radius: 1.5rem;
   padding: 1rem;
-  width: 65%;
+  width: 85%;
   max-width: 80rem;
   margin-left: auto;
   margin-right: auto;
