--- a/sass/main.scss
+++ b/sass/main.scss
@@ -30,6 +30,10 @@
     align-items: center;
     padding: .5rem;
   }
+
+  .query__container {
+    width: 65%;
+  }
 }
 
 @media only screen and (min-width: 75rem) {
